force-app/main/default/objects/Hospitalization__c/Hospitalization__c.object-meta.xml
<CustomObject>
    <label>Hospitalization</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Hospitalization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitalizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>