force-app/main/default/objects/Hospitalization__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hospitalizations</relationshipLabel>
    <relationshipName>Hospitalizations</relationshipName>
    <type>Lookup</type>
</CustomField>