force-app/main/default/objects/Hospitalization__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>