force-app/main/default/objects/Hospitalization__c/fields/Discharge_Plan_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Plan_Follow_Up__c</fullName>
    <label>Discharge Plan/Follow Up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>