force-app/main/default/objects/Hospitalization__c/fields/Has_Discharge_Plan_Follow__c.field-meta.xml
<CustomField>
    <fullName>Has_Discharge_Plan_Follow__c</fullName>
    <label>Has Discharge Plan/Follow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>