force-app/main/default/objects/Hospitalization__c/fields/Name_of_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Hospital__c</fullName>
    <label>Name of Hospital</label>
    <length>100</length>
    <type>Text</type>
</CustomField>