force-app/main/default/objects/Hospitalization__c/fields/Reason_For_Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Hospitalization__c</fullName>
    <label>Reason For Hospitalization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergic Reaction</fullName>
            </value>
            <value>
                <fullName>Anemia</fullName>
            </value>
            <value>
                <fullName>Appendicitis</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Back Problem</fullName>
            </value>
            <value>
                <fullName>Blood Disorder</fullName>
            </value>
            <value>
                <fullName>Broken bone(s)</fullName>
            </value>
            <value>
                <fullName>Bronchitis</fullName>
            </value>
            <value>
                <fullName>Burn treatment</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cardiac arrhythmia</fullName>
            </value>
            <value>
                <fullName>Chronic obstructive lung disease</fullName>
            </value>
            <value>
                <fullName>Circulatory disorder</fullName>
            </value>
            <value>
                <fullName>Condition not defined</fullName>
            </value>
            <value>
                <fullName>Congenital abnormality</fullName>
            </value>
            <value>
                <fullName>Dehydration</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Digestive disorder</fullName>
            </value>
            <value>
                <fullName>Eating disorder</fullName>
            </value>
            <value>
                <fullName>Electrolyte disorder</fullName>
            </value>
            <value>
                <fullName>Endocrine disorder</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>Female reproductive disorder</fullName>
            </value>
            <value>
                <fullName>Failure to Thrive</fullName>
            </value>
            <value>
                <fullName>Heart disease</fullName>
            </value>
            <value>
                <fullName>Homicidal ideation</fullName>
            </value>
            <value>
                <fullName>Immunity disorder</fullName>
            </value>
            <value>
                <fullName>Infectious disease</fullName>
            </value>
            <value>
                <fullName>Injury (NOS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>