force-app/main/default/objects/Hospitalization__c/fields/Type_Of_Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Hospitalization__c</fullName>
    <label>Type Of Hospitalization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Drug Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Intensive Care</fullName>
            </value>
            <value>
                <fullName>Long Term Care</fullName>
            </value>
            <value>
                <fullName>Physical Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Burn Unit</fullName>
            </value>
            <value>
                <fullName>Cardiac Problem (Specify)</fullName>
            </value>
            <value>
                <fullName>Intensive Care (Specify)</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Medical (Specify)</fullName>
            </value>
            <value>
                <fullName>Observation (Specify)</fullName>
            </value>
            <value>
                <fullName>Oncology (Specify)</fullName>
            </value>
            <value>
                <fullName>Orthopedic (Specify)</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Psychiatric (Specify)</fullName>
            </value>
            <value>
                <fullName>Sleep Disorder Unit</fullName>
            </value>
            <value>
                <fullName>Surgery (Specify)</fullName>
            </value>
            <value>
                <fullName>Alcohol Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Mental</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>